kubernetes/controller-agent/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: controller-agent
  namespace: controller-agent
spec:
  selector:
    app.kubernetes.io/name: controller-agent
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
