kubernetes/controller-agent/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: controller-agent
  namespace: controller-agent
  annotations:
    argocd.argoproj.io/sync-wave: "40"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  ingressClassName: nginx
  rules:
    - host: langsmith.nodadyoushutup.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: controller-agent
                port:
                  number: 80
